testsuite/tests/properties/invalid_no/bad_type.lkt
import common

class BarNode: FooNode {
    @exported fun prop(): Int = null[Int]
}
